docs/versioned_docs/version-1.0.0/reference/rich_text.mdx
<!-- Generated by port_legacy_docs.py v2 from v1.0.0 (3125e5c1e7bc33b5bfd5723806e01f14810511a6). Historical snapshot—do not edit directly. -->

<a id="rich-text"></a>
# Rich Text

## Rich Text Elements (Primitives) {#rich-text-elements-primitives}
### RichText {#rich_text.elements.RichText}

**Class**

```python
RichText(text: str, bold: Optional[bool] = None, italic: Optional[bool] = None, strike: Optional[bool] = None, code: Optional[bool] = None)
```

<div className="api-docstring">

The core unit of the rich text API. Allows for the formatting of text
    with visual styles like bolding, italics and strikethroughs.
    Combined with higher-level containers like `RichTextSection`,
    `RichText` can be used to create complicated and deeply nested
    rich text within Slack messages.

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `text` | `str` | the text content to render. |
| `bold` | `Optional[bool]` | whether to render the given text in bold font. |
| `italic` | `Optional[bool]` | whether to render the given text in italics. |
| `strike` | `Optional[bool]` | whether to render the given text with a "strikethrough". |
| `code` | `Optional[bool]` | whether to render the given text as an inline code snippet<br />(monospaced). |

</div>

### RichTextChannel {#rich_text.elements.RichTextChannel}

**Class**

```python
RichTextChannel(channel_id: str, bold: Optional[bool] = None, italic: Optional[bool] = None, strike: Optional[bool] = None, highlight: Optional[bool] = None, client_highlight: Optional[bool] = None, unlink: Optional[bool] = None)
```

<div className="api-docstring">

Rich text rendering of a Slack channel (e.g. #general).

See: [https://api.slack.com/reference/block-kit/blocks#channel-element-type](https://api.slack.com/reference/block-kit/blocks#channel-element-type)

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `channel_id` | `str` | the ID of the channel to render. You can get this from<br />the channel settings or the URL (if using Slack in the browser). |
| `bold` | `Optional[bool]` | whether to render the given channel in bold font. |
| `italic` | `Optional[bool]` | whether to render the given channel in italics. |
| `strike` | `Optional[bool]` | whether to render the given channel with a "strikethrough". |
| `highlight` | `Optional[bool]` | whether to give the channel a distinct highlight when rendered. |
| `client_highlight` | `Optional[bool]` | ??? |
| `unlink` | `Optional[bool]` | whether to remove the link to the channel from the channel when<br />rendered. |

</div>

### RichTextEmoji {#rich_text.elements.RichTextEmoji}

**Class**

```python
RichTextEmoji(name: str)
```

<div className="api-docstring">

A rich text element for displaying an emoji.

The emoji can either be one built in to Slack or a custom workspace emoji.

See: [https://api.slack.com/reference/block-kit/blocks#emoji-element-type](https://api.slack.com/reference/block-kit/blocks#emoji-element-type)

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `name` | `str` | the unique name of the emoji to represent e.g. "wave". |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | if the emoji `name` provided is empty. |

</div>

### RichTextLink {#rich_text.elements.RichTextLink}

**Class**

```python
RichTextLink(url: str, text: Optional[str] = None, unsafe: Optional[bool] = None, bold: Optional[bool] = None, italic: Optional[bool] = None, strike: Optional[bool] = None, code: Optional[bool] = None)
```

<div className="api-docstring">

A rich text primitive to display links in text.

See: [https://api.slack.com/reference/block-kit/blocks#link-element-type](https://api.slack.com/reference/block-kit/blocks#link-element-type)

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `url` | `str` | the url which the link will point to. |
| `text` | `Optional[str]` | the text to render with the link. If not provided, the raw URL<br />will be used. |
| `unsafe` | `Optional[bool]` | whether the link is "safe". |
| `bold` | `Optional[bool]` | whether to render the given text in bold font. |
| `italic` | `Optional[bool]` | whether to render the given text in italics. |
| `strike` | `Optional[bool]` | whether to render the given text with a "strikethrough". |
| `code` | `Optional[bool]` | whether to render the given text as an inline code snippet<br />(monospaced). |

</div>

### RichTextUser {#rich_text.elements.RichTextUser}

**Class**

```python
RichTextUser(user_id: str, bold: Optional[bool] = None, italic: Optional[bool] = None, strike: Optional[bool] = None, highlight: Optional[bool] = None, client_highlight: Optional[bool] = None, unlink: Optional[bool] = None)
```

<div className="api-docstring">

Rich text element for representing users in
    [`RichTextBlocks`](/v1.0.0/reference/blocks/#blocks.RichTextBlock).

See: [https://api.slack.com/reference/block-kit/blocks#user-element-type](https://api.slack.com/reference/block-kit/blocks#user-element-type).

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `user_id` | `str` | the Slack ID of the user in question, you can get these<br />from users' profiles or Slack client requests. |
| `bold` | `Optional[bool]` | whether to render the given user in bold font. |
| `italic` | `Optional[bool]` | whether to render the given user in italics. |
| `strike` | `Optional[bool]` | whether to render the given user with a "strikethrough". |
| `highlight` | `Optional[bool]` | whether to give the user a distinct highlight when rendered. |
| `client_highlight` | `Optional[bool]` | ??? |
| `unlink` | `Optional[bool]` | whether to remove the link to the user from the channel when<br />rendered. |

</div>

### RichTextUserGroup {#rich_text.elements.RichTextUserGroup}

**Class**

```python
RichTextUserGroup(user_group_id: str, bold: Optional[bool] = None, italic: Optional[bool] = None, strike: Optional[bool] = None, highlight: Optional[bool] = None, client_highlight: Optional[bool] = None, unlink: Optional[bool] = None)
```

<div className="api-docstring">

Rich text element for representing groups of users in
    [`RichTextBlocks`](/v1.0.0/reference/blocks/#blocks.RichTextBlock)`.

See: [https://api.slack.com/reference/block-kit/blocks#user-element-type](https://api.slack.com/reference/block-kit/blocks#user-element-type).

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `user_group_id` | `str` | the Slack ID of the user group being represented. |
| `bold` | `Optional[bool]` | whether to render the given user in bold font. |
| `italic` | `Optional[bool]` | whether to render the given user in italics. |
| `strike` | `Optional[bool]` | whether to render the given user with a "strikethrough". |
| `highlight` | `Optional[bool]` | whether to give the user a distinct highlight when rendered. |
| `client_highlight` | `Optional[bool]` | ??? |
| `unlink` | `Optional[bool]` | whether to remove the link to the user from the channel when<br />rendered. |

</div>
## Rich Text Objects (Containers) {#rich-text-objects-containers}
### ListType {#rich_text.objects.ListType}

**Class**

```python

```

<div className="api-docstring">

An `Enum` that lists the available types of rich text lists.

- `ListType.BULLET`: an unorderd (bulleted) list.
- `ListType.ORDERED`: an ordered (numbered) list.

</div>

### RichTextCodeBlock {#rich_text.objects.RichTextCodeBlock}

**Class**

```python
RichTextCodeBlock(elements: Union[RichTextElement, List[RichTextElement]], border: Optional[int] = None)
```

<div className="api-docstring">

A rich text element for representing blocks of code in
    [`RichTextBlocks`](/v1.0.0/reference/blocks/#blocks.RichTextBlock).

This is roughly equivalent to the triple-backtick \`\`\``code`\`\`\` syntax in markdown.

See: [https://api.slack.com/reference/block-kit/blocks#rich_text_preformatted](https://api.slack.com/reference/block-kit/blocks#rich_text_preformatted).

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `elements` | `Union[RichTextElement, List[RichTextElement]]` | one or more rich text primitive objexts<br />(e.g. [`RichText`](/v1.0.0/reference/rich_text#rich_text.elements.RichText)). |
| `border` | `Optional[int]` | the thickness (in pixels) of the border around the code block. |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | if any of the items in `elements` aren't valid rich<br />text elements. |

</div>

### RichTextList {#rich_text.objects.RichTextList}

**Class**

```python
RichTextList(style: Union[str, ListType], elements: Union[RichTextSection, List[RichTextSection]], indent: Optional[int] = None, offset: Optional[int] = 0, border: Optional[int] = 0)
```

<div className="api-docstring">

Renders to a HTML list containing rich text elements.

See: [https://api.slack.com/reference/block-kit/blocks#rich_text_list](https://api.slack.com/reference/block-kit/blocks#rich_text_list).

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `style` | `Union[str, ListType]` | one of `ListType.BULLET` or `ListType.ORDERED`. |
| `elements` | `Union[RichTextSection, List[RichTextSection]]` | a list of (possibly nested) `RichTextSection` elements.<br />Each object in this list will be rendered as a list item. |
| `indent` | `Optional[int]` | indent (in pixels) of each list item. |
| `offset` | `Optional[int]` | offset (in pixels) of each list item. |
| `border` | `Optional[int]` | thickness (in pixels) of the (optional) border around the list. |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | if style is not a valid `ListType` or any of the<br />items in `elements` isn't a valid `RichTextSection`. |

</div>

### RichTextQuote {#rich_text.objects.RichTextQuote}

**Class**

```python
RichTextQuote(elements: Union[RichTextElement, List[RichTextElement]], border: Optional[int] = None)
```

<div className="api-docstring">

A rich text object for representing a block quote.

Block quotes are presented with a vertical bar to the left hand side of
    the text.

See: [https://api.slack.com/reference/block-kit/blocks#rich_text_quote](https://api.slack.com/reference/block-kit/blocks#rich_text_quote)

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `elements` | `Union[RichTextElement, List[RichTextElement]]` | one or more rich text primitive objexts<br />(e.g. [`RichText`](/v1.0.0/reference/rich_text#rich_text.elements.RichText)). |
| `border` | `Optional[int]` | the thickness (in pixels) of the border around the code block. |

</div>

### RichTextSection {#rich_text.objects.RichTextSection}

**Class**

```python
RichTextSection(elements: Union[RichTextElement, List[RichTextElement]])
```

<div className="api-docstring">

The most basic rich text container object, which takes rich text elements
    and renders them when `RichTextSection` is passed to a
    [`RichTextBlock`](/v1.0.0/reference/blocks#blocks.RichTextBlock).

See: [https://api.slack.com/reference/block-kit/blocks#rich_text_section](https://api.slack.com/reference/block-kit/blocks#rich_text_section).

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `elements` | `Union[RichTextElement, List[RichTextElement]]` | one or more rich text elements that will form the content of the section.<br />e.g. `RichText`, `RichTextLink`. |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | if any of the items passed to `elements` isn't a valid<br />`RichTextObject`. |

</div>
