docs/versioned_docs/version-2.0.0/reference/rich_text.mdx
<!-- Generated by port_legacy_docs.py v2 from v2.0.0 (ab4d7f0208fff3167819ec2464ddd38f91ceb401). Historical snapshot—do not edit directly. -->

<a id="rich-text"></a>
# Rich Text

The **Rich Text** API lets you build inline-formatted content (bold, italic, strikethrough, code, links, mentions, lists, quotes, code blocks) without writing markdown by hand.

Structure:

- A [`RichTextBlock`](/v2.0.0/reference/blocks#blocks.RichTextBlock) wraps one or more *containers*.
- **Containers** group elements: [`RichTextSection`](#rich_text.objects.RichTextSection), [`RichTextList`](#rich_text.objects.RichTextList), [`RichTextQuote`](#rich_text.objects.RichTextQuote), [`RichTextCodeBlock`](#rich_text.objects.RichTextCodeBlock).
- **Elements** are the leaf primitives: [`RichText`](#rich_text.elements.RichText) (styled text), [`RichTextLink`](#rich_text.elements.RichTextLink), [`RichTextUser`](#rich_text.elements.RichTextUser), [`RichTextChannel`](#rich_text.elements.RichTextChannel), [`RichTextEmoji`](#rich_text.elements.RichTextEmoji), [`RichTextUserGroup`](#rich_text.elements.RichTextUserGroup).

See the [Rich-formatted alert cookbook recipe](/v2.0.0/usage/cookbook#rich-formatted-alert) for a complete example.

Slack reference: [https://api.slack.com/reference/block-kit/blocks#rich_text](https://api.slack.com/reference/block-kit/blocks#rich_text)


## Rich Text Elements (Primitives) {#rich-text-elements-primitives}
### RichText {#rich_text.elements.RichText}

**Class**

```python
RichText(text: str, bold: bool | None = None, italic: bool | None = None, strike: bool | None = None, code: bool | None = None)
```

<div className="api-docstring">

The core unit of the rich text API. Allows for the formatting of text
    with visual styles like bolding, italics and strikethroughs.
    Combined with higher-level containers like `RichTextSection`,
    `RichText` can be used to create complicated and deeply nested
    rich text within Slack messages.

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `text` | `str` | the text content to render. |
| `bold` | `bool \| None` | whether to render the given text in bold font. |
| `italic` | `bool \| None` | whether to render the given text in italics. |
| `strike` | `bool \| None` | whether to render the given text with a "strikethrough". |
| `code` | `bool \| None` | whether to render the given text as an inline code snippet<br />(monospaced). |

</div>

### RichTextChannel {#rich_text.elements.RichTextChannel}

**Class**

```python
RichTextChannel(channel_id: str, bold: bool | None = None, italic: bool | None = None, strike: bool | None = None, highlight: bool | None = None, client_highlight: bool | None = None, unlink: bool | None = None)
```

<div className="api-docstring">

Rich text rendering of a Slack channel (e.g. #general).

See: [https://api.slack.com/reference/block-kit/blocks#channel-element-type](https://api.slack.com/reference/block-kit/blocks#channel-element-type)

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `channel_id` | `str` | the ID of the channel to render. You can get this from<br />the channel settings or the URL (if using Slack in the browser). |
| `bold` | `bool \| None` | whether to render the given channel in bold font. |
| `italic` | `bool \| None` | whether to render the given channel in italics. |
| `strike` | `bool \| None` | whether to render the given channel with a "strikethrough". |
| `highlight` | `bool \| None` | whether to give the channel a distinct highlight when rendered. |
| `client_highlight` | `bool \| None` | a Slack-internal rendering hint accompanying<br />mention-style elements. Rarely needed by app developers; pass<br />``None`` (the default) unless you have a specific reason to set<br />it. |
| `unlink` | `bool \| None` | whether to remove the link to the channel from the channel when<br />rendered. |

</div>

### RichTextEmoji {#rich_text.elements.RichTextEmoji}

**Class**

```python
RichTextEmoji(name: str)
```

<div className="api-docstring">

A rich text element for displaying an emoji.

The emoji can either be one built in to Slack or a custom workspace emoji.

See: [https://api.slack.com/reference/block-kit/blocks#emoji-element-type](https://api.slack.com/reference/block-kit/blocks#emoji-element-type)

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `name` | `str` | the unique name of the emoji to represent e.g. "wave". |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | if the emoji `name` provided is empty. |

</div>

### RichTextLink {#rich_text.elements.RichTextLink}

**Class**

```python
RichTextLink(url: str, text: str | None = None, unsafe: bool | None = None, bold: bool | None = None, italic: bool | None = None, strike: bool | None = None, code: bool | None = None)
```

<div className="api-docstring">

A rich text primitive to display links in text.

See: [https://api.slack.com/reference/block-kit/blocks#link-element-type](https://api.slack.com/reference/block-kit/blocks#link-element-type)

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `url` | `str` | the url which the link will point to. |
| `text` | `str \| None` | the text to render with the link. If not provided, the raw URL<br />will be used. |
| `unsafe` | `bool \| None` | whether the link is "safe". |
| `bold` | `bool \| None` | whether to render the given text in bold font. |
| `italic` | `bool \| None` | whether to render the given text in italics. |
| `strike` | `bool \| None` | whether to render the given text with a "strikethrough". |
| `code` | `bool \| None` | whether to render the given text as an inline code snippet<br />(monospaced). |

</div>

### RichTextUser {#rich_text.elements.RichTextUser}

**Class**

```python
RichTextUser(user_id: str, bold: bool | None = None, italic: bool | None = None, strike: bool | None = None, highlight: bool | None = None, client_highlight: bool | None = None, unlink: bool | None = None)
```

<div className="api-docstring">

Rich text element for representing users in
    [`RichTextBlocks`](/v2.0.0/reference/blocks/#blocks.RichTextBlock).

See: [https://api.slack.com/reference/block-kit/blocks#user-element-type](https://api.slack.com/reference/block-kit/blocks#user-element-type).

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `user_id` | `str` | the Slack ID of the user in question, you can get these<br />from users' profiles or Slack client requests. |
| `bold` | `bool \| None` | whether to render the given user in bold font. |
| `italic` | `bool \| None` | whether to render the given user in italics. |
| `strike` | `bool \| None` | whether to render the given user with a "strikethrough". |
| `highlight` | `bool \| None` | whether to give the user a distinct highlight when rendered. |
| `client_highlight` | `bool \| None` | a Slack-internal rendering hint accompanying<br />mention-style elements. Rarely needed by app developers; pass<br />``None`` (the default) unless you have a specific reason to set<br />it. |
| `unlink` | `bool \| None` | whether to remove the link to the user from the channel when<br />rendered. |

</div>

### RichTextUserGroup {#rich_text.elements.RichTextUserGroup}

**Class**

```python
RichTextUserGroup(user_group_id: str, bold: bool | None = None, italic: bool | None = None, strike: bool | None = None, highlight: bool | None = None, client_highlight: bool | None = None, unlink: bool | None = None)
```

<div className="api-docstring">

Rich text element for representing groups of users in
    [`RichTextBlocks`](/v2.0.0/reference/blocks/#blocks.RichTextBlock)`.

See: [https://api.slack.com/reference/block-kit/blocks#user-element-type](https://api.slack.com/reference/block-kit/blocks#user-element-type).

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `user_group_id` | `str` | the Slack ID of the user group being represented. |
| `bold` | `bool \| None` | whether to render the given user in bold font. |
| `italic` | `bool \| None` | whether to render the given user in italics. |
| `strike` | `bool \| None` | whether to render the given user with a "strikethrough". |
| `highlight` | `bool \| None` | whether to give the user a distinct highlight when rendered. |
| `client_highlight` | `bool \| None` | a Slack-internal rendering hint accompanying<br />mention-style elements. Rarely needed by app developers; pass<br />``None`` (the default) unless you have a specific reason to set<br />it. |
| `unlink` | `bool \| None` | whether to remove the link to the user from the channel when<br />rendered. |

</div>

### _style_dict {#rich_text.elements._style_dict}

**Function**

```python
_style_dict(**flags: bool | None) -> dict[str, bool] | None
```

<div className="api-docstring">

Build a rich text "style" sub-object from named boolean flags.

Any flag that is explicitly ``None`` is dropped. If every flag is dropped
(i.e. nothing was set), returns ``None`` so the caller can decide whether
to emit the ``style`` key at all.

</div>
## Rich Text Objects (Containers) {#rich-text-objects-containers}
### ListType {#rich_text.objects.ListType}

**Class**

```python

```

<div className="api-docstring">

An `Enum` that lists the available types of rich text lists.

- `ListType.BULLET`: an unorderd (bulleted) list.
- `ListType.ORDERED`: an ordered (numbered) list.

</div>

### RichTextCodeBlock {#rich_text.objects.RichTextCodeBlock}

**Class**

```python
RichTextCodeBlock(elements: RichTextElement | list[RichTextElement], border: int | None = None)
```

<div className="api-docstring">

A rich text element for representing blocks of code in
    [`RichTextBlocks`](/v2.0.0/reference/blocks/#blocks.RichTextBlock).

This is roughly equivalent to the triple-backtick ```code``` syntax in markdown.

See: [https://api.slack.com/reference/block-kit/blocks#rich_text_preformatted](https://api.slack.com/reference/block-kit/blocks#rich_text_preformatted).

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `elements` | `RichTextElement \| list[RichTextElement]` | one or more rich text primitive objexts<br />(e.g. [`RichText`](/v2.0.0/reference/rich_text/#rich_text.elements.RichText)). |
| `border` | `int \| None` | the thickness (in pixels) of the border around the code block. |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | if any of the items in `elements` aren't valid rich<br />text elements. |

</div>

### RichTextList {#rich_text.objects.RichTextList}

**Class**

```python
RichTextList(style: str | ListType, elements: RichTextSection | list[RichTextSection], indent: int | None = None, offset: int | None = 0, border: int | None = 0)
```

<div className="api-docstring">

Renders to a HTML list containing rich text elements.

See: [https://api.slack.com/reference/block-kit/blocks#rich_text_list](https://api.slack.com/reference/block-kit/blocks#rich_text_list).

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `style` | `str \| ListType` | one of `ListType.BULLET` or `ListType.ORDERED`. |
| `elements` | `RichTextSection \| list[RichTextSection]` | a list of (possibly nested) `RichTextSection` elements.<br />Each object in this list will be rendered as a list item. |
| `indent` | `int \| None` | indent (in pixels) of each list item. |
| `offset` | `int \| None` | offset (in pixels) of each list item. |
| `border` | `int \| None` | thickness (in pixels) of the (optional) border around the list. |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | if style is not a valid `ListType` or any of the<br />items in `elements` isn't a valid `RichTextSection`. |

</div>

### RichTextQuote {#rich_text.objects.RichTextQuote}

**Class**

```python
RichTextQuote(elements: RichTextElement | list[RichTextElement], border: int | None = None)
```

<div className="api-docstring">

A rich text object for representing a block quote.

Block quotes are presented with a vertical bar to the left hand side of
    the text.

See: [https://api.slack.com/reference/block-kit/blocks#rich_text_quote](https://api.slack.com/reference/block-kit/blocks#rich_text_quote)

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `elements` | `RichTextElement \| list[RichTextElement]` | one or more rich text primitive objexts<br />(e.g. [`RichText`](/v2.0.0/reference/rich_text/#rich_text.elements.RichText)). |
| `border` | `int \| None` | the thickness (in pixels) of the border around the code block. |

</div>

### RichTextSection {#rich_text.objects.RichTextSection}

**Class**

```python
RichTextSection(elements: RichTextElement | list[RichTextElement])
```

<div className="api-docstring">

The most basic rich text container object, which takes rich text elements
    and renders them when `RichTextSection` is passed to a
    [`RichTextBlock`](/v2.0.0/reference/blocks/#blocks.RichTextBlock).

See: [https://api.slack.com/reference/block-kit/blocks#rich_text_section](https://api.slack.com/reference/block-kit/blocks#rich_text_section).

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `elements` | `RichTextElement \| list[RichTextElement]` | one or more rich text elements that will form the content of the section.<br />e.g. `RichText`, `RichTextLink`. |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | if any of the items passed to `elements` isn't a valid<br />`RichTextObject`. |

</div>
